--- a/res/nkwgok.css
+++ b/res/nkwgok.css
@@ -46,6 +46,18 @@ Styles for the GOK Tree
 	color: #999;
 }
 
+.gokContainer.tree.newStyle .opacLink.shallow {
+	display: none;
+}
+
+.gokContainer.tree.newStyle.shallowLinks .opacLink.shallow {
+	display: inline;
+}
+
+.gokContainer.tree.newStyle.shallowLinks .opacLink.deep {
+	display: none;
+}
+
 .gokContainer.tree.newStyle .opacLink:link:after {
 	content: "\002192";
 	padding-left: 0.2em;
