create function for node creation
… and slightly refactor so we can use that function for the root node as well

--- a/res/nkwgok.css
+++ b/res/nkwgok.css
@@ -71,7 +71,7 @@ Styles for the GOK Tree
 	font-family: monospace;
 }
 
-.gokContainer.tree.hideGOKID li .GOKID {
+.gokContainer.tree.hideGOKID .GOKID {
 	display:none;
 }
 
