improve deep Opac linking
if deep Opac linking is used
* add an additional class 'General' to the child-nodes for parent nodes which have hits
* strip terms indicating general results from item names (for MED*)
* refine sorting of fetched tree items to fetch all data in a single query

--- a/res/nkwgok.css
+++ b/res/nkwgok.css
@@ -84,11 +84,23 @@ a:hover .GOKID {
 	display: none;
 }
 
+.gokContainer.tree .general-items-node .opacLink.shallow {
+	display: inline;
+}
+
+.gokContainer.tree .general-items-node .opacLink.deep {
+	display: none;
+}
+
 .gokContainer.tree.shallowLinks .opacLink.shallow {
 	display: inline;
 }
 
 .gokContainer.tree.shallowLinks .opacLink.deep {
+	display: none;
+}
+
+.gokContainer.tree.shallowLinks .general-items-node {
 	display: none;
 }
 
@@ -101,6 +113,9 @@ a:hover .GOKID {
 	color: #333;
 }
 
+.gokContainer.tree .rootNode .plusMinus.nkwgok-invisible {
+	display: none;
+}
 
 
 /*
