--- a/Resources/Private/Scss/nkwgok.scss
+++ b/Resources/Private/Scss/nkwgok.scss
@@ -66,6 +66,10 @@
             .GOKID {
                 left: -0.5em;
             }
+
+            .plusMinus.nkwgok-invisible {
+                display: none;
+            }
         }
 
         .GOKName {
@@ -77,7 +81,41 @@
             font-style: italic;
             color: #999;
 
+            &:link:after {
+                content: "\002192";
+                padding-left: 0.2em;
+            }
+
+            &:hover {
+                color: #333;
+            }
+
             &.shallow {
+                display: none;
+            }
+        }
+
+        .general-items-node {
+            .opacLink.shallow {
+                display: inline;
+            }
+
+            .opacLink.deep {
+                display: none;
+            }
+
+        }
+
+        &.shallowLinks {
+            .opacLink.shallow {
+                display: inline;
+            }
+
+            .opacLink.deep {
+                display: none;
+            }
+
+            .general-items-node {
                 display: none;
             }
         }
@@ -96,39 +134,6 @@ a:hover {
         text-decoration: none;
         color: #666;
     }
-}
-
-.gokContainer.tree .general-items-node .opacLink.shallow {
-    display: inline;
-}
-
-.gokContainer.tree .general-items-node .opacLink.deep {
-    display: none;
-}
-
-.gokContainer.tree.shallowLinks .opacLink.shallow {
-    display: inline;
-}
-
-.gokContainer.tree.shallowLinks .opacLink.deep {
-    display: none;
-}
-
-.gokContainer.tree.shallowLinks .general-items-node {
-    display: none;
-}
-
-.gokContainer.tree .opacLink:link:after {
-    content: "\002192";
-    padding-left: 0.2em;
-}
-
-.gokContainer.tree .opacLink:hover {
-    color: #333;
-}
-
-.gokContainer.tree .rootNode .plusMinus.nkwgok-invisible {
-    display: none;
 }
 
 /*  Styles for the GOK Columns  */
