Fix string casting and Update Dependencies

--- a/Resources/Public/Css/nkwgok.css
+++ b/Resources/Public/Css/nkwgok.css
@@ -5,11 +5,9 @@
   border: 0 none;
   position: relative;
 }
-
 .gokContainer.tree a:link:hover {
   text-decoration: underline;
 }
-
 .gokContainer.tree a .GOKID {
   font-weight: normal;
   display: block;
@@ -20,85 +18,66 @@
   position: relative;
   left: -9.5em;
 }
-
 .gokContainer.tree ul {
   list-style-type: none;
   padding-left: 0;
 }
-
 .gokContainer.tree ul ul {
   margin: 0 0 0 -7.5em;
 }
-
 .gokContainer.tree ul li {
   padding-left: 9em;
   text-indent: -9em;
 }
-
 .gokContainer.tree ul .rootNode .GOKID {
   left: -9.5em;
 }
-
 .gokContainer.tree.hideGOKID ul li {
   padding-left: 3em;
   text-indent: -3em;
 }
-
 .gokContainer.tree.hideGOKID ul ul {
   margin: 0 0 0 -1em;
 }
-
 .gokContainer.tree.hideGOKID .GOKID {
   display: none;
 }
-
 .gokContainer.tree .rootNode .GOKID {
   left: -0.5em;
 }
-
 .gokContainer.tree .rootNode .plusMinus.nkwgok-invisible {
   display: none;
 }
-
 .gokContainer.tree .GOKName {
   font-weight: bold;
 }
-
 .gokContainer.tree .opacLink {
   font-size: 71%;
   font-style: italic;
   color: #999;
 }
-
 .gokContainer.tree .opacLink:link:after {
-  content: "\002192";
+  content: "→";
   padding-left: 0.2em;
 }
-
 .gokContainer.tree .opacLink:hover {
   color: #333;
 }
-
 .gokContainer.tree .opacLink.shallow {
   display: none;
 }
-
 .gokContainer.tree .general-items-node .opacLink.shallow {
   display: inline;
 }
-
 .gokContainer.tree .general-items-node .opacLink.deep {
   display: none;
 }
-
 .gokContainer.tree.shallowLinks .opacLink.shallow {
   display: inline;
 }
-
 .gokContainer.tree.shallowLinks .opacLink.deep {
   display: none;
 }
-
 .gokContainer.tree.shallowLinks .general-items-node {
   display: none;
 }
@@ -117,11 +96,9 @@ a:hover .GOKID {
   background: #eee;
   overflow: visible;
 }
-
 .gokContainer.column a.opacLink {
   display: none;
 }
-
 .gokContainer.column ul {
   position: relative;
   width: 22%;
@@ -132,51 +109,42 @@ a:hover .GOKID {
   border-left: 1px solid #999;
   float: left;
 }
-
 .gokContainer.column ul.level-0 .GOKID {
   display: none;
 }
-
 .gokContainer.column li {
   position: relative;
   margin: 0;
   border-bottom: 1px dotted #999;
 }
-
 .gokContainer.column li.close a {
   color: #900;
 }
-
 .gokContainer.column li.close:after {
   color: #900;
   display: block;
   position: absolute;
   top: 0.3em;
   right: 0;
-  content: '»';
+  content: "»";
 }
-
 .gokContainer.column li.open:after {
   display: block;
   position: absolute;
   top: 0.3em;
   right: 0;
-  content: '»';
+  content: "»";
 }
-
 .gokContainer.column li a {
   display: block;
   padding: 4px 0 4px 6px;
 }
-
 .gokContainer.column .plusMinus {
   display: none;
 }
-
 .gokContainer.column .general-items-node {
   display: none;
 }
-
 .gokContainer.column .rootNode {
   display: none;
 }
